--- a/Day1/Pointers_1/Pointers_1/Pointers_1.vcxproj.filters
+++ b/Day1/Pointers_1/Pointers_1/Pointers_1.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Day1.cpp">
+    <ClCompile Include="Pointers_1.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
